<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/realWhiteColor"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:background="#3b5998"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/questionCount"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/open_sans_semibold"
            android:freezesText="true"
            android:text="@string/question_1_x"
            android:textColor="@color/whiteColor"
            android:textSize="17sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="21dp" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/open_sans_semibold"
            android:freezesText="true"
            android:text="@string/score_x"
            android:textColor="@color/whiteColor"
            android:textSize="17sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="21dp" />

        <TextView
            android:id="@+id/timeView"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="21dp"
            android:fontFamily="@font/open_sans_semibold"
            android:freezesText="true"
            android:text="@string/_00_30"
            android:textColor="@color/whiteColor"
            android:textSize="17sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="21dp" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="363dp"
            android:layout_height="118dp"
            android:layout_below="@+id/timeView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/open_sans_semibold"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/questionQuestion"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true" />


    </RelativeLayout>


    <!--    <RelativeLayout-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:background="@color/realWhiteColor"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/ad_view_container"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->

    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">-->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="219dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/realWhiteColor"
        android:gravity="center_vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:elevation="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:freezesText="true"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:text="@string/option_1"
            android:textColor="@color/blackColor" />


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:elevation="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:freezesText="true"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:text="@string/option_2"
            android:textColor="@color/blackColor" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:elevation="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:freezesText="true"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:text="@string/option_3"
            android:textColor="@color/blackColor" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/radio_selector"
            android:button="@null"
            android:elevation="8dp"
            android:fontFamily="@font/open_sans_bold"
            android:freezesText="true"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:text="@string/option_4"
            android:textColor="@color/blackColor" />


    </RadioGroup>








</androidx.constraintlayout.widget.ConstraintLayout>